# PedPy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  benchmarking.ipynb  codecov.yml  jpsreport.ipynb  jpsreport.py  mypy.ini  pita.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  usage.ipynb  velocity.ipynb  versioneer.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml  weekly-dispatch-latest-release.yml
LICENSES/: MIT.txt
analyzer/: __init__.py  _version.py  application.py
analyzer/data/: geometry.py  trajectory_data.py
analyzer/io/: geometry_parser.py  ini_parser.py  trajectory_loader.py  trajectory_parser.py
analyzer/methods/: density_calculator.py  flow_calculator.py  method_utils.py  profile_calculator.py  velocity_calculator.py
analyzer/util/: _version.py  loghelper.py
demos/bottleneck/: traj.txt
demos/crossing/: geometry.xml
demos/uni-directional/: uo-060-180-180.txt  uo-180-180-180.txt
docs/: requirements.txt
docs/source/: CECM.ipynb  changelog.rst  citation.rst  conf.py  demo-data  density.rst  developer_guide.rst  disclaimer.rst  flow.rst  fundamental_diagram.ipynb  fundamental_diagram_at_measurement_line.ipynb  getting_started.ipynb  getting_started.rst  index.rst  jpsreport.rst  preprocessing.ipynb  profiles.rst  readthedocs.ipynb  user_guide.ipynb  velocity.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: breadcrumbs_custom.css  breadcrumbs_custom.html
docs/source/api/: column_identifiers.rst  data.rst  index.rst  io.rst  methods.rst  pedpy.data.geometry.rst  pedpy.data.rst  pedpy.data.trajectory_data.rst  pedpy.io.rst  pedpy.io.trajectory_loader.rst  pedpy.methods.density_calculator.rst  pedpy.methods.flow_calculator.rst  pedpy.methods.method_utils.rst  pedpy.methods.profile_calculator.rst  pedpy.methods.rst  pedpy.methods.velocity_calculator.rst  pedpy.plotting.plotting.rst  pedpy.plotting.rst  pedpy.rst  plotting.rst  preprocessing.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/density_calculator/: index.rst
docs/source/autoapi/flow_calculator/: index.rst
docs/source/autoapi/geometry/: index.rst
docs/source/autoapi/method_utils/: index.rst
docs/source/autoapi/pedpy/: index.rst
docs/source/autoapi/plotting/: index.rst
docs/source/autoapi/profile_calculator/: index.rst
docs/source/dev/: index.rst
docs/source/getting_started/: getting_started.ipynb
docs/source/methods/: index.rst
docs/source/notebooks/: analysis.ipynb  fundamental_diagram.ipynb  fundamental_diagram_at_measurement_line.ipynb  measurement_setup.ipynb  preprocessing.ipynb  readthedocs.ipynb  working_with_results.ipynb
docs/source/user_guide/: index.rst
helper/: create_trajectories.py
notebooks/: CECM.ipynb  Fast-Marching.ipynb  fundamental_diagram.ipynb  fundamental_diagram_at_measurement_line.ipynb  getting_started.ipynb  jpsreport.ipynb  preprocessing.ipynb  temporal_analysis_user_guide.ipynb  test_pdf.ipynb  test_pdf.py  testing_CECM.ipynb  usage.ipynb  user_guide.ipynb
notebooks/demo-data/bi-directional/: bi_corr_400_b_03.txt  bidirectional_data.pkl
notebooks/demo-data/jupedsim/: trajectories.sqlite
notebooks/demo-data/pathfinder/: pathfinder.csv
notebooks/demo-data/preprocessing/: 030_c_56_h0_invalid.txt
notebooks/demo-data/single_file/: 00_01a.h5  n34_cam2.csv  n56_cam1.csv
notebooks/demo-data/uni-directional/: uo-050-180-180.txt  uo-100-180-180.txt  uo-180-180-120.txt
pedpy/: __init__.py  _version.py  column_identifier.py  defintitons.py  errors.py  types.py
pedpy/data/: geometry.py  trajectory_data.py
pedpy/internal/: utils.py
pedpy/io/: __init__.py  crowdit_loader.py  helper.py  jupedsim_loader.py  pathfinder_loader.py  ped_data_archive_loader.py  trajectory_loader.py  vadere_loader.py  viswalk_loader.py
pedpy/methods/: acceleration_calculator.py  density_calculator.py  dimensionless_number_calculator.py  flow_calculator.py  foo_calculator.py  method_utils.py  other_characterisation_methods.py  pair-distribution-function_calculator.py  pair_distribution_function.py  pair_distribution_function_calculator.py  profile_calculator.py  spatial_analysis.py  speed_calculator.py  steady_state_detector.py  temporal_analysis.py  velocity_calculator.py
pedpy/plotting/: plotting.py
pedpy/preprocessing/: trajectory_outlier_detection.py  trajectory_projector.py
report/: __init__.py  application.py
report/data/: configuration.py  geometry.py  trajectory_data.py
report/io/: geometry_parser.py  ini_parser.py  result_writer.py  trajectory_parser.py
report/methods/: density_calculator.py  flow_calculator.py  method_CCM.py  method_a.py  method_utils.py  utils.py  velocity_calculator.py
scripts/: bench_profiles.py  check-format.sh  ci.sh  format.sh  generate_bibtex.py
tests/: __init__.py
tests/data/: test_trajectory_data.py
tests/helper/: create_trajectories.py
tests/io/: test_ini_parser.py  test_trajectory_parser.py
tests/methods/: test_density_calculator.py  test_method_utils.py  test_velocity_calculator.py
tests/reference_tests/: reference_test.py
tests/reference_tests/data/corner/: geo.xml  (+2 more)
tests/unit_tests/data/: test_geometry.py  test_trajectory_data.py
tests/unit_tests/io/: test_crowdit_loader.py  test_ini_parser.py  test_jupedsim_loader.py  test_pathfinder_loader.py  test_ped_data_archive_loader.py  test_trajectory_loader.py  test_trajectory_parser.py  test_vadere_loader.py  test_viswalk_loader.py  utils.py
tests/unit_tests/methods/: test_compute_individual_voronoi_polygons.py  test_density_calculator.py  test_dimensionless_number_calculator.py  test_flow_calculator.py  test_method_utils.py  test_profile_calculator.py  test_rset_map.py  test_speed_calculator.py  test_steady_state_detector.py  test_trajectory_data_type_check.py  test_trajectory_projector.py
tests/unit_tests/preprocessing/: test_trajectory_outlier_detection.py  test_trajectory_projector.py
tests/utils/: utils.py
(+47 files in other folders)
