[project]
name = "PedPy"
dynamic = ['version']
authors = [{ name = "T. Schrödter" }]
description = "PedPy is a Python module for pedestrian movement analysis."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy~=1.25,<2.0",
    "pandas~=2.0",
    "Shapely~=2.0",
    "scipy~=1.11",
    "matplotlib~=3.7",
    "h5py~=3.10.0",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://pedpy.readthedocs.io/"

[build-system]
requires = ["setuptools>=42", "wheel", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{next_version}.dev{distance}"
distance-dirty = "{next_version}.dev{distance}"

[tool.versioningit.write]
file = "pedpy/_version.py"
default-tag = "0.0.0"
template = """
__version__ = "{version}"
__commit_hash__ = "{rev}"
"""

[tool.setuptools]
packages = [
    "pedpy", "pedpy.data", "pedpy.internal",
    "pedpy.io",
    "pedpy.methods",
    "pedpy.plotting",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
src = ["pedpy"]
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint]
select = ["E", "W", "I", "D", "PL", "NPY"]
ignore = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

#[tool.ruff.lint.pylint]
## Maximum number of arguments for function / method.
#max-args=5
## Maximum number of boolean expressions in an if statement (see R0916).
#max-bool-expr=5
## Maximum number of branch for function / method body.
#max-branches=15
## Maximum number of locals for function / method body.
#max-locals=20
## Maximum number of public methods for a class (see R0904).
#max-public-methods=20
## Maximum number of return / yield for function / method body.
#max-returns=6
## Maximum number of statements in function / method body.
#max-statements=50
## Constant types to ignore when used as "magic values" (see: PLR2004).
#allow-magic-value-types = ["int"]
