[metadata]
name = jpsreport
version = 0.0.2
author = t.schroedter
description = JPSreport is a command line module to analyze trajectories of pedestrians.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schroedtert/jpsreport-python
project_urls =
    Bug Tracker = https://github.com/schroedtert/jpsreport-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aenum==3.1.5
    numpy==1.21.4
    pandas==1.3.4
    Shapely==1.8.0
    click==8.0.2

[options.entry_points]
console_scripts =
    jpsreport = report.application:main

[options.packages.find]
include=report*
exclude=tests*
